--- a/front/src/app/shared/home/home.component.scss
+++ b/front/src/app/shared/home/home.component.scss
@@ -10,6 +10,7 @@
 
 .home h1 {
     color: #31304D;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .buttons button {
