sidebar + router outlet

--- a/front/src/app/shared/sidebar/sidebar.component.html
+++ b/front/src/app/shared/sidebar/sidebar.component.html
@@ -5,22 +5,22 @@
                 <button mat-button><mat-icon>dashboard</mat-icon> Dashboard</button>
             </mat-list-item>
             <mat-list-item routerLink="/stage">
-                <button mat-button><mat-icon>home</mat-icon> Stages</button>
+                <button mat-button><mat-icon>folder_shared</mat-icon> Stages</button>
             </mat-list-item>
             <mat-list-item routerLink="/etudiant">
-                <button mat-button><mat-icon>explore</mat-icon> Etudiants</button>
+                <button mat-button><mat-icon>school</mat-icon> Etudiants</button>
             </mat-list-item>
             <mat-list-item routerLink="/professeur">
-                <button mat-button><mat-icon>table</mat-icon> Professeurs</button>
+                <button mat-button><mat-icon>supervisor_account</mat-icon> Professeurs</button>
             </mat-list-item>
             <mat-list-item routerLink="/tuteur">
-                <button mat-button><mat-icon>settings</mat-icon> Tuteurs</button>
+                <button mat-button><mat-icon>supervised_user_circle</mat-icon> Tuteurs</button>
             </mat-list-item>
             <mat-list-item routerLink="/entreprise">
-                <button mat-button><mat-icon>help</mat-icon> Entreprises</button>
+                <button mat-button><mat-icon>business</mat-icon> Entreprises</button>
             </mat-list-item>
             <mat-list-item routerLink="/">
-                <button mat-button><mat-icon>analytics</mat-icon> Quitter</button>
+                <button mat-button><mat-icon>exit_to_app</mat-icon> Quitter</button>
             </mat-list-item>
         </mat-nav-list>
 
