--- a/front/src/app/admin/layout/layout.component.html
+++ b/front/src/app/admin/layout/layout.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container>
-    <mat-drawer mode="side" opened="true">
+    <mat-drawer color="primary" mode="side" opened="true">
         <app-sidebar></app-sidebar>
     </mat-drawer>
     <mat-drawer-content>
