--- a/front/src/app/admin/layout/layout.component.scss
+++ b/front/src/app/admin/layout/layout.component.scss
@@ -1,3 +1,11 @@
-* {
+mat-drawer-container {
     height: 100%;
+}
+
+mat-drawer {
+    width: 250px;
+}
+
+mat-drawer-content {
+    padding: 30px 0 0 50px;
 }
