--- a/front/src/app/shared/home/home.component.html
+++ b/front/src/app/shared/home/home.component.html
@@ -1,11 +1,11 @@
 <div class="home">
     <h1>GESTION STAGES ECM</h1>
     <div class="buttons">
-        <button>
-            <a routerLink="/authentification">Administrateur</a>
+        <button routerLink="/authentification">
+            <a>Administrateur</a>
         </button>
-        <button>
-            <a routerLink="/">Autre</a>
+        <button routerLink="/identification">
+            <a>Autre</a>
         </button>
     </div>
 </div>
