--- a/front/src/app/admin/dashboard/dashboard.component.html
+++ b/front/src/app/admin/dashboard/dashboard.component.html
@@ -1,1 +1,10 @@
-<p>dashboard works!</p>
+<div class="dashboard">
+    <h1>Statistiques de la plateforme.</h1>
+    <div class="subdash">
+        <div class="carre"><b>1000 </b> Stages</div>
+        <div class="carre"><b>1000 </b>Etudiants</div>
+        <div class="carre"><b>1000 </b>Professeurs</div>
+        <div class="carre"><b>1000 </b>Tuteurs</div>
+        <div class="carre"><b>1000 </b>Entreprises</div>
+    </div>
+</div>
