--- a/front/src/app/admin/etudiant/etudiant.component.html
+++ b/front/src/app/admin/etudiant/etudiant.component.html
@@ -1,1 +1,38 @@
-<p>etudiant works!</p>
+<div class="etudiant">
+    <p>Ajouter ou consulter la liste des étudiants.</p>
+    <div class="ajout">
+        <button>Ajouter</button>
+    </div>
+    <div class="liste">
+        <table class="table table-striped">
+            <thead>
+              <tr>
+                <th scope="col">N°</th>
+                <th scope="col">Nom</th>
+                <th scope="col">Prénom</th>
+                <th scope="col">Qualité</th>
+                <th scope="col">Email</th>
+                <th scope="col">Adresse</th>
+                <th scope="col">Date de naissance</th>
+                <th scope="col">Sexe</th>
+                <th scope="col">Téléphone</th>
+                <th scope="col">Mention</th>
+                <th scope="col">Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+            </tbody>
+          </table> 
+    </div>
+</div>
