--- a/front/src/app/shared/sidebar/sidebar.component.html
+++ b/front/src/app/shared/sidebar/sidebar.component.html
@@ -1,26 +1,26 @@
 <mat-drawer-container autosize>
-    <mat-drawer-content>
+    <mat-drawer-content style="background-color: white;">
         <mat-nav-list>
-            <mat-list-item routerLink="/dashboard">
-                <button mat-button><mat-icon>dashboard</mat-icon> Dashboard</button>
+            <mat-list-item routerLink="/dashboard" routerLinkActive="active">
+                <button mat-button [disableRipple]="true"><mat-icon>dashboard</mat-icon> Dashboard</button>
             </mat-list-item>
-            <mat-list-item routerLink="/stage">
-                <button mat-button><mat-icon>folder_shared</mat-icon> Stages</button>
+            <mat-list-item routerLink="/stage" routerLinkActive="active">
+                <button mat-button [disableRipple]="true"><mat-icon>folder_shared</mat-icon> Stages</button>
             </mat-list-item>
-            <mat-list-item routerLink="/etudiant">
-                <button mat-button><mat-icon>school</mat-icon> Etudiants</button>
+            <mat-list-item routerLink="/etudiant" routerLinkActive="active">
+                <button mat-button [disableRipple]="true"><mat-icon>school</mat-icon> Etudiants</button>
             </mat-list-item>
-            <mat-list-item routerLink="/professeur">
-                <button mat-button><mat-icon>supervisor_account</mat-icon> Professeurs</button>
+            <mat-list-item routerLink="/professeur" routerLinkActive="active">
+                <button mat-button [disableRipple]="true"><mat-icon>supervisor_account</mat-icon> Professeurs</button>
             </mat-list-item>
-            <mat-list-item routerLink="/tuteur">
-                <button mat-button><mat-icon>supervised_user_circle</mat-icon> Tuteurs</button>
+            <mat-list-item routerLink="/tuteur" routerLinkActive="active">
+                <button mat-button [disableRipple]="true"><mat-icon>supervised_user_circle</mat-icon> Tuteurs</button>
             </mat-list-item>
-            <mat-list-item routerLink="/entreprise">
-                <button mat-button><mat-icon>business</mat-icon> Entreprises</button>
+            <mat-list-item routerLink="/entreprise" routerLinkActive="active">
+                <button mat-button [disableRipple]="true"><mat-icon>business</mat-icon> Entreprises</button>
             </mat-list-item>
             <mat-list-item routerLink="/">
-                <button mat-button><mat-icon>exit_to_app</mat-icon> Quitter</button>
+                <button mat-button [disableRipple]="true"><mat-icon>exit_to_app</mat-icon> Quitter</button>
             </mat-list-item>
         </mat-nav-list>
 
