--- a/front/src/app/admin/dashboard/dashboard.component.scss
+++ b/front/src/app/admin/dashboard/dashboard.component.scss
@@ -8,6 +8,11 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+.dashboard h1{
+    font-size: 25px;
+    font-weight: bold;
+}
+
 .subdash {
     width: 100%;
     margin-top: 20px;
