--- a/front/src/app/admin/professeur/professeur.component.html
+++ b/front/src/app/admin/professeur/professeur.component.html
@@ -1,1 +1,40 @@
-<p>professeur works!</p>
+<div class="professeur">
+    <p>Ajouter ou consulter la liste des professeurs.</p>
+    <div class="ajout">
+        <button>Ajouter</button>
+    </div>
+    <div class="liste">
+        <table class="table table-striped">
+            <thead>
+              <tr>
+                <th scope="col">N°</th>
+                <th scope="col">Qualité</th>
+                <th scope="col">Nom</th>
+                <th scope="col">Prenom</th>
+                <th scope="col">Email</th>
+                <th scope="col">Adresse</th>
+                <th scope="col">Code postal</th>
+                <th scope="col">Ville</th>
+                <th scope="col">Téléphone école</th>
+                <th scope="col">Télephone domicile</th>
+                <th scope="col">Date embauche</th>
+                <th scope="col">Date départ</th>
+              </tr>
+            </thead>
+            <tbody>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+            </tbody>
+          </table> 
+    </div>
+</div>
