--- a/front/src/app/admin/stage/stage.component.html
+++ b/front/src/app/admin/stage/stage.component.html
@@ -1,1 +1,32 @@
-<p>stage works!</p>
+<div class="stage">
+    <p>Ajouter ou consulter la liste des stages.</p>
+    <div class="ajout">
+        <button>Ajouter</button>
+    </div>
+    <div class="liste">
+        <table class="table table-striped">
+            <thead>
+              <tr>
+                <th scope="col">N°</th>
+                <th scope="col">N° étudiant</th>
+                <th scope="col">N° professeur</th>
+                <th scope="col">N° tuteur</th>
+                <th scope="col">N° entreprise</th>
+                <th scope="col">Code type</th>
+                <th scope="col">Année stage</th>
+                <th scope="col">Compte rendu</th>
+              </tr>
+            </thead>
+            <tbody>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+            </tbody>
+          </table> 
+    </div>
+</div>
