--- a/front/src/app/admin/tuteur/tuteur.component.html
+++ b/front/src/app/admin/tuteur/tuteur.component.html
@@ -1,1 +1,26 @@
-<p>tuteur works!</p>
+<div class="tuteur">
+    <p>Ajouter ou consulter la liste des tuteurs.</p>
+    <div class="ajout">
+        <button>Ajouter</button>
+    </div>
+    <div class="liste">
+        <table class="table table-striped">
+            <thead>
+              <tr>
+                <th scope="col">N°</th>
+                <th scope="col">Qualité</th>
+                <th scope="col">Nom</th>
+                <th scope="col">Prenom</th>
+                <th scope="col">Télephone</th>
+              </tr>
+            </thead>
+            <tbody>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+            </tbody>
+          </table> 
+    </div>
+</div>
