--- a/front/src/app/admin/entreprise/entreprise.component.html
+++ b/front/src/app/admin/entreprise/entreprise.component.html
@@ -1,1 +1,36 @@
-<p>entreprise works!</p>
+<div class="entreprise">
+    <p>Ajouter ou consulter la liste des entreprises.</p>
+    <div class="ajout">
+        <button>Ajouter</button>
+    </div>
+    <div class="liste">
+        <table class="table table-striped">
+            <thead>
+              <tr>
+                <th scope="col">N°</th>
+                <th scope="col">Forme juridique</th>
+                <th scope="col">Raison sociale</th>
+                <th scope="col">Adresse</th>
+                <th scope="col">Code postal</th>
+                <th scope="col">Ville</th>
+                <th scope="col">Télephone</th>
+                <th scope="col">Fax</th>
+                <th scope="col">Contact</th>
+                <th scope="col">Télephone contact</th>
+              </tr>
+            </thead>
+            <tbody>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+              <th>x</th>
+            </tbody>
+          </table> 
+    </div>
+</div>
