--- a/front/src/app/admin/tuteur/tuteur.component.html
+++ b/front/src/app/admin/tuteur/tuteur.component.html
@@ -3,6 +3,10 @@
     <div class="ajout">
         <button>Ajouter</button>
     </div>
+    <div class="filtre">
+      <label for="">Filtrer la recherche</label>
+      <input type="text" placeholder="Rechercher par des mots clés">
+    </div>
     <div class="liste">
         <table class="table table-striped">
             <thead>
@@ -24,3 +28,4 @@
           </table> 
     </div>
 </div>
+<app-footer></app-footer>
