--- a/front/src/app/shared/identification/identification.component.html
+++ b/front/src/app/shared/identification/identification.component.html
@@ -1,17 +1,10 @@
 <div class="identification">
-    <h1>Vous êtes ?</h1>
-    <div class="buttons">
-        <button routerLink="/identification">
-            <a>Professeur</a>
-        </button>
-        <button routerLink="/identification">
-            <a>Etudiant</a>
-        </button>        
+    <div class="mail-section">
+        <label for="">Saisir votre e-mail</label>
+        <input type="email" name="" id="" placeholder="exemple@email.domain">
     </div>
-    <div class="revenir">
-            <button routerLink="">
-                <mat-icon>keyboard_backspace</mat-icon>
-            </button>
-        </div>
+    <div class="retour">
+        <mat-icon routerLink="/">keyboard_backspace</mat-icon>
+    </div>
 </div>
 <app-footer></app-footer>
