--- a/front/src/app/shared/sidebar/sidebar.component.html
+++ b/front/src/app/shared/sidebar/sidebar.component.html
@@ -1,6 +1,7 @@
 <mat-drawer-container autosize>
     <mat-drawer-content style="background-color: white;">
         <mat-nav-list>
+            <p>GESTION ECM</p>
             <mat-list-item routerLink="/dashboard" routerLinkActive="active">
                 <button mat-button [disableRipple]="true"><mat-icon>dashboard</mat-icon> Dashboard</button>
             </mat-list-item>
