--- a/front/src/app/shared/sidebar/sidebar.component.scss
+++ b/front/src/app/shared/sidebar/sidebar.component.scss
@@ -32,3 +32,12 @@ mat-icon {
 .active {
     background-color: #B6BBC4;
 }
+
+p {
+    color: #B6BBC4;
+    text-align: center;
+    font-size: 30px;
+    margin-top: -20px;
+    font-weight: bold;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
