--- a/front/src/app/admin/stage/stage.component.scss
+++ b/front/src/app/admin/stage/stage.component.scss
@@ -27,3 +27,21 @@
     background-color: #A4A9B1;
     transition: .2s;
 }
+
+.filtre {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    margin-bottom: 40px;
+}
+
+.filtre input {
+    width: 800px;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid #B6BBC4;
+    outline: none;
+    padding-left: 10px;
+    padding: 20px;
+}
