--- a/front/src/app/shared/footer/footer.component.scss
+++ b/front/src/app/shared/footer/footer.component.scss
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #f8f9fa;
+    background-color: #e7ebef;
     padding: 20px 0;
     text-align: center;
     font-size: 14px;
