--- a/front/src/app/admin/type/type.component.html
+++ b/front/src/app/admin/type/type.component.html
@@ -13,11 +13,18 @@
               <tr>
                 <th scope="col">Code</th>
                 <th scope="col">Nombre de semaines</th>
+                <th scope="col">Actions</th>
               </tr>
             </thead>
-            <tbody>
-              <th>x</th>
-              <th>x</th>
+            <tbody *ngFor="let type of listeTypes">
+              <tr>
+                <td>{{type.code_type}}</td>
+                <td>{{type.nb_semaines}}</td>
+                <td>
+                  <mat-icon>edit</mat-icon>
+                  <mat-icon>delete</mat-icon>
+                </td>
+              </tr>
             </tbody>
           </table> 
     </div>
