secure paths using Authentication Guards

--- a/front/src/app/admin/professeur/professeur.component.html
+++ b/front/src/app/admin/professeur/professeur.component.html
@@ -1,7 +1,7 @@
 <div class="professeur">
     <p>Ajouter ou consulter la liste des professeurs.</p>
     <div class="ajout">
-        <button>Ajouter</button>
+        <button (click)="ajouterProf()">Ajouter</button>
     </div>
     <div class="filtre">
       <label for="">Filtrer la recherche</label>
