fixer identification email

--- a/front/src/app/shared/identification/identification.component.html
+++ b/front/src/app/shared/identification/identification.component.html
@@ -3,7 +3,7 @@
         <label for="">Saisir votre e-mail</label>
         <div class="emailsubmission">
             <input type="email" [(ngModel)]="userInput" placeholder="exemple@email.domain">
-            <button (click)="submit()" routerLink="/userinterface">Submit</button>
+            <button (click)="submit()">Submit</button>
         </div>
 
     </div>
