--- a/front/src/app/admin/professeur/professeur.component.scss
+++ b/front/src/app/admin/professeur/professeur.component.scss
@@ -5,6 +5,9 @@
     justify-content: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding: 50px;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
 }
 
 .professeur p {
